Make links more readable and fix SlickVegas page layout

--- a/css/main.scss
+++ b/css/main.scss
@@ -270,6 +270,15 @@ html {
                     max-width: 90vw;
                 }
 
+                a {
+                    display: inline-flex;
+                    background-color: rgba(0, 0, 0, 0.5);
+                    padding: 0.25em;
+                    border-radius: 7.5%;
+
+                    align-content: center;
+                }
+
                 nav {
                     width: 100%;
                     margin: 0;
